added card tricks and whats new section

--- a/contains/static/styles/main.css
+++ b/contains/static/styles/main.css
@@ -3,7 +3,18 @@ body {
   height: 100vh;
   margin: 0;
   font-family: 'Roboto', 'Londrina Solid', sans-serif;
-  
+
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 ul {
@@ -131,9 +142,6 @@ section {
   margin-top: -.4em;
   display: block;
 }
-a{
-
-}
 .featured-desc {
   color: #3B3B3B;
   margin-bottom: 3em;
@@ -142,11 +150,161 @@ a{
   line-height: 1.8em;
 }
 
+.card-list {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  display: flex;
+  padding: 3rem !important;
+  overflow-x: scroll;
+}
+
+.card {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  height: 350px;
+  width: 400px;
+  min-width: 250px;
+  padding: 1.5rem !important;
+  border-radius: 16px;
+  background: #E8F6EF;
+  box-shadow: -1rem 0 3rem #000;
+  color: #38A3A5;
+  transition: .4s;
+}
+.card:hover h2{
+  transform: translateY(-1rem);
+  font-size: 3rem;
+  transition: .4s;
+}
+
+.card:hover p{
+  transform: translateY(-1rem);
+  font-size: 2rem;
+  transition: .4s;
+}
+.card:hover~.card {
+  transform: translateX(130px);
+}
+.card:not(:first-child) {
+  margin-left: -130px;
+}
+.card-list::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.card-list::-webkit-scrollbar {
+display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.card-list {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+/* .card-list::-webkit-scrollbar-thumb {
+  background: #201c29;
+  border-radius: 10px;
+  box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25), inset -2px -2px 2px rgba(0,0,0,.25);
+}
+
+.card-list::-webkit-scrollbar-track {
+  display: none !important;
+  background: linear-gradient(90deg,#201c29,#201c29 1px,#17141d 0,#17141d);
+} */
+.card-author {
+  position: relative;
+  display: grid;
+  grid-template-columns: 75px 1fr;
+  align-items: center;
+  margin: 3rem 0 0;
+}
+
+.author-avatar img {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  filter: grayscale(100%);
+  margin: 16px 10px;
+}
+
+.half-circle {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 60px;
+  height: 48px;
+  fill: none;
+  stroke: #ff8a00;
+  stroke-width: 8;
+  stroke-linecap: round;
+}
+.hcard {
+  margin-bottom: auto;
+}
+
+.hcard p {
+  font-size: 14px;
+  margin: 0 0 1rem;
+  color: #7a7a8c;
+}
+
+.hcard h2 {
+  font-size: 20px;
+  margin: .25rem 0 auto;
+  cursor: pointer;
+}
+
+.hcard h2:hover {
+
+  background: linear-gradient(90deg,#ff8a00,#e52e71);
+  text-shadow: none;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.tags {
+  margin: 1rem 0 2rem;
+  padding: .5rem 0 1rem;
+  line-height: 4;
+  margin-bottom: 0;
+}
+
+.tags a {
+  font-style: normal;
+  font-weight: 700;
+  font-size: .5rem;
+  color: #7a7a8c;
+  text-transform: uppercase;
+  font-size: 1.42rem;
+  border: 3px solid #28242f;
+  border-radius: 2rem;
+  padding: .2rem .85rem .25rem;
+  position: relative;
+}
+
+.tags a:hover {
+  background: linear-gradient(90deg,#22577A,#e52e71);
+  text-shadow: none;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+  background-clip: text;
+  border-color: #22577A;
+  background-color:lightgreen;
+}
+
+
 .skills {
   background-color: #E8F6EF;
   margin-top:0em !important;
   margin-bottom: 0em !important;
   padding-top:8em;
+  padding-left: 20px;
 }
 
 .skills-container ul li {
@@ -218,13 +376,13 @@ a{
     margin-bottom: -7em;
     padding-top: 11em;
   }
-  .skills-container ul {
+  /* .skills-container ul {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: (auto)[3];
-        grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, auto);
     grid-gap: 1em;
-  }
+  } */
   .portfolio {
     padding-top: 7em;
   }
@@ -290,6 +448,7 @@ font-size:2.2rem;}
   }
   .social-header {
     display: block !important;
+    max-width: 44% !important;
   }
   .social-header ul {
     display: -webkit-box!important;
@@ -303,7 +462,7 @@ font-size:2.2rem;}
     margin-right: 4em!important;
   }
   .social-header ul img {
-    width: 30px!important;
+    width: 44px!important;
     padding-left: 1em!important;
     padding-right: 1em!important;
     -webkit-box-sizing: unset !important;
