--- a/contains/templates/index.html
+++ b/contains/templates/index.html
@@ -1,11 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-<style>
-    a:visited{
-    text-decoration: none !important;
-    color:black;
-    }
-</style>
     <div class="nav-container navbar-static-top">
         <header>
             <a href="index.html" class="logo">Zwick Tech</a>
@@ -166,26 +160,21 @@
     <a name="guides"></a>
     <section class="guides">
         <h1 class="guidestitle">Programming Guides</h1>
-        <div class = "guideslist">
-            <!-- for each guide in guideslist -->
-            <a href="{{url_for('guide', id=1)}}">
-            <div class="guidelistitem" >
-                <div class="guidelisttitle" style="display:flex; margin-top:1.5rem;" >
+        <div class="guidescontainer">
+            <div class="guide">
                 <img src="{{url_for('static', filename='images/dsa.png')}}" class="guidespic">
-                <h1 class="guidesitemtitle">Python Data Structures & Algorithms</h1>
-                 </div>
-                <p style="margin-left:4vw; font-size:2.4rem; margin-right:4vw; color: gray !important; font-weight:650 !important;">This is my comprehensive guide on the
-                data structures and algorithms in python.</p>
-            </div></a>
-            <!-- for each guide in guideslist -->
-            <div class="guidelistitem" >
-                <div class="guidelisttitle" style="display:flex; margin-top:1.5rem;" >
-                <img src="{{url_for('static', filename='images/python.png')}}" class="guidespic">
-                <h1 class="guidesitemtitle">Web Development in Python with Flask</h1>
-                 </div>
-                <p style="margin-left:4vw; font-size:2.4rem; margin-right:4vw; color: gray !important;  font-weight:650 !important;">This is my guide on how to develop a web
-                server and the basics of using flask for web development with python.</p>
+                <div class="noteFooter">
+                <span class="noteDate"><h2 style="font-size:2rem;">Python Data Structures and Algorithms</h2>
+                </span>
                 </div>
+            </div>
+            <div class="guide">
+                <img src="{{url_for('static', filename='images/python.png')}}" class="guidespic">
+                <div class="noteFooter">
+                <span class="noteDate"><h2 style="font-size:2rem;">Web Development with Flask and Python</h2>
+                </span>
+                </div>
+            </div>
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js" integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
