changed whats new padding and guide hover

--- a/contains/templates/index.html
+++ b/contains/templates/index.html
@@ -50,7 +50,7 @@
             <ellipse class="square-anim" cx="376" cy="238.5" rx="71" ry="76.5" fill="#E8F6EF"/>
         </svg>
     </div>
-    <p class="subtitle" style="text-align: center; font-size: 5rem; font-weight: 200; margin-top:100px;">What's New?</p>
+    <p class="subtitle" style="text-align: center; font-size: 5rem; font-weight: 200; margin-top:100px; padding-top: 100px;">What's New?</p>
     <section class="card-list">
         <a name="MySkills"></a>
             <article class="card">
@@ -161,14 +161,14 @@
     <section class="guides">
         <h1 class="guidestitle">Programming Guides</h1>
         <div class="guidescontainer">
-            <div class="guide">
+            <div class="guide wrap-image">
                 <img src="{{url_for('static', filename='images/dsa.png')}}" class="guidespic">
                 <div class="noteFooter">
                 <span class="noteDate"><h2 style="font-size:2rem;">Python Data Structures and Algorithms</h2>
                 </span>
                 </div>
             </div>
-            <div class="guide">
+            <div class="guide wrap-image">
                 <img src="{{url_for('static', filename='images/python.png')}}" class="guidespic">
                 <div class="noteFooter">
                 <span class="noteDate"><h2 style="font-size:2rem;">Web Development with Flask and Python</h2>
