--- a/contains/static/styles/main.css
+++ b/contains/static/styles/main.css
@@ -518,7 +518,38 @@ font-size:2.2rem;}
     max-width: 500px;
   }
 }
-
+.wrap-image {
+  position: relative;
+  &::before,
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    border: 2px solid yellow;
+    transition: all .25s ease-out;
+  }
+  &::before {
+    background-color: yellow;
+    top: -15px;
+    left: -15px;
+  }
+  &::after {
+    bottom: -15px;
+    right: -15px;
+  }
+  &:hover {
+    &::before {
+      top: 15px;
+      left: 15px;
+    }
+    &::after {
+      bottom: 15px;
+      right: 15px;
+    }
+  }
+}
 @media only screen and (min-width: 1250px) {
   header {
     padding: 2em 2em 2em 10em;
