changed guideimg to shadow on hover

--- a/contains/templates/index.html
+++ b/contains/templates/index.html
@@ -161,14 +161,14 @@
     <section class="guides">
         <h1 class="guidestitle">Programming Guides</h1>
         <div class="guidescontainer">
-            <div class="guide wrap-image">
+            <div class="guide">
                 <img src="{{url_for('static', filename='images/dsa.png')}}" class="guidespic">
                 <div class="noteFooter">
                 <span class="noteDate"><h2 style="font-size:2rem;">Python Data Structures and Algorithms</h2>
                 </span>
                 </div>
             </div>
-            <div class="guide wrap-image">
+            <div class="guide">
                 <img src="{{url_for('static', filename='images/python.png')}}" class="guidespic">
                 <div class="noteFooter">
                 <span class="noteDate"><h2 style="font-size:2rem;">Web Development with Flask and Python</h2>
