--- a/contains/static/styles/main.css
+++ b/contains/static/styles/main.css
@@ -298,6 +298,9 @@ display: none;
   background-color:lightgreen;
 }
 
+.guidespic:hover {
+box-shadow: -1rem 0 2rem #000;
+}
 
 .skills {
   background-color: #E8F6EF;
@@ -399,6 +402,7 @@ a:visited{
   display: grid;
   grid-gap: 10rem;
   grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
+  padding-top: 4vw;
 }
 .guidespic{
 max-height:100%;
