--- a/contains/static/styles/main.css
+++ b/contains/static/styles/main.css
@@ -26,7 +26,6 @@ ul {
 a {
   text-decoration: none;
   font-size:1.6rem;
-  font-weight:750;
 }
 
 img {
@@ -299,8 +298,9 @@ display: none;
 }
 
 .guidespic:hover {
-box-shadow: -1rem 0 2rem #000;
+box-shadow: -2rem 0 3rem #000;
 }
+
 
 .skills {
   background-color: #E8F6EF;
@@ -415,6 +415,10 @@ display:flex;
 flex-direction: column;
 border: 6px solid #E8F6EF;
 border-radius:24px;
+}
+
+guide:hover {
+box-shadow: -1rem 0 2rem #000;
 }
 
 
